// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--always-show-all"
    id=":label8"
  >
    Viser alle options også når valgt
  </label>
  <u-combobox>
    <data
      data-removable="true"
      value="Sogndal"
      role="button"
      tabindex="-1"
      aria-label="Sogndal, Press to remove, 1 of 1"
    >
      Sogndal
    </data>
    <input
      placeholder
      popovertarget="«r7»-list"
      id="components-suggestion--always-show-all"
      type="text"
      list="«r7»-list"
      aria-label="Viser alle options også når valgt, "
      aria-autocomplete="list"
      aria-controls="«r7»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r7»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label8"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Controlled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--controlled"
    id=":label3"
  >
    Velg destinasjoner
  </label>
  <u-combobox>
    <data
      data-removable="true"
      value="Oslo"
      role="button"
      tabindex="-1"
      aria-label="Oslo, Press to remove, 1 of 1"
    >
      Oslo
    </data>
    <input
      placeholder
      popovertarget="«r2»-list"
      id="components-suggestion--controlled"
      type="text"
      list="«r2»-list"
      aria-label="Velg destinasjoner, "
      aria-autocomplete="list"
      aria-controls="«r2»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r2»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label3"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Oslo
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Controlled Multiple 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--controlled-multiple"
    id=":label4"
  >
    Velg destinasjoner
  </label>
  <u-combobox data-multiple>
    <data
      data-removable="true"
      value="Oslo"
      role="button"
      tabindex="-1"
      aria-label="Oslo, Press to remove, 1 of 1"
    >
      Oslo
    </data>
    <input
      placeholder
      popovertarget="«r3»-list"
      id="components-suggestion--controlled-multiple"
      type="text"
      list="«r3»-list"
      aria-label="Velg destinasjoner, Navigate left to find 1 selected"
      aria-autocomplete="list"
      aria-controls="«r3»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r3»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="true"
      aria-labelledby=":label4"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Oslo
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-1"
    id=":label6"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <u-combobox>
    <input
      placeholder
      popovertarget="«r5»-list"
      id="components-suggestion--custom-filter-alt-1"
      type="text"
      list="«r5»-list"
      aria-label="Skriv inn et tall mellom 1-6, "
      aria-autocomplete="list"
      aria-controls="«r5»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r5»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label6"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        value="sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        value="brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        value="lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Custom Filter Alt 2 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-2"
    id=":label7"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <u-combobox>
    <input
      placeholder
      popovertarget="«r6»-list"
      id="components-suggestion--custom-filter-alt-2"
      type="text"
      list="«r6»-list"
      aria-label="Skriv inn et tall mellom 1-6, "
      aria-autocomplete="list"
      aria-controls="«r6»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r6»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label7"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Default Value 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--default-value"
    id=":label5"
  >
    Velg en destinasjon
  </label>
  <u-combobox>
    <data
      data-removable="true"
      value="Sogndal"
      role="button"
      tabindex="-1"
      aria-label="Sogndal, Press to remove, 1 of 1"
    >
      Sogndal
    </data>
    <input
      placeholder
      popovertarget="«r4»-list"
      id="components-suggestion--default-value"
      type="text"
      list="«r4»-list"
      aria-label="Velg en destinasjon, "
      aria-autocomplete="list"
      aria-controls="«r4»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r4»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label5"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Fetch External 1`] = `
<div lang="en">
  <label
    data-weight="medium"
    for="components-suggestion--fetch-external"
    id=":label9"
  >
    Search for countries (in english)
  </label>
  <u-combobox>
    <input
      placeholder
      popovertarget="«r8»-list"
      id="components-suggestion--fetch-external"
      type="text"
      list="«r8»-list"
      aria-label="Search for countries (in english), "
      aria-autocomplete="list"
      aria-controls="«r8»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d country"
      data-sr-plural="%d countries"
      id="«r8»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label9"
      style="width: 1168px; translate: <removed>;"
    >
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Multiple 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--multiple"
    id=":label2"
  >
    Velg en destinasjon
  </label>
  <u-combobox data-multiple>
    <input
      placeholder
      popovertarget="«r1»-list"
      id="components-suggestion--multiple"
      type="text"
      list="«r1»-list"
      aria-label="Velg en destinasjon, No selected"
      aria-autocomplete="list"
      aria-controls="«r1»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r1»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="true"
      aria-labelledby=":label2"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--preview"
    id=":label1"
  >
    Velg en destinasjon
  </label>
  <u-combobox>
    <input
      placeholder
      popovertarget="«r0»-list"
      id="components-suggestion--preview"
      type="text"
      list="«r0»-list"
      aria-label="Velg en destinasjon, "
      aria-autocomplete="list"
      aria-controls="«r0»-list"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      data-icon="true"
      data-variant="tertiary"
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      data-nofilter
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r0»-list"
      popover="manual"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      aria-labelledby=":label1"
      style="width: 1168px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </u-combobox>
</div>
`;
